--- a/e-learning-js/1-7(loops-nested)/index.html
+++ b/e-learning-js/1-7(loops-nested)/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <title>exo - JavaScript (Loops-Iteration)</title>
-        <meta name="description" content="Here I work on JS (Loops-Iteration), Doranco's JS exercise">
+        <title>exo - JavaScript (Loops-Nested)</title>
+        <meta name="description" content="Here I work on JS (Loops-Nested), Doranco's JS exercise">
     </head>
     <body>
         
