--- a/laurent-js1/outils.html
+++ b/laurent-js1/outils.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <title>2022.07.18 - OUTILS - 1er "JavaScript"</title>
+        <title>2022.07.18 - OUTILS - 1er&2ème jours "JavaScript"</title>
+        <meta name="description" content="Here I work on JS, Laurent's JS lessons">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
