--- a/laurent-js/events.html
+++ b/laurent-js/events.html
@@ -16,8 +16,29 @@
         </header>
 
         <main>
-            <h2>Click</h2>
-            <div id="madiv">Div 1</div>
+            <h2>(1) click</h2>
+            <div id="divUne">DIV-1</div><hr>
+
+            <h2>(2) dblclick</h2>
+            <div class="divDeux">DIV-2</div><hr>
+
+            <h2>(3) mouseover</h2>
+            <div>DIV-3</div><hr>
+
+            <h2>(4) mouseout</h2>
+            <div id="divout">DIV-4</div><hr>
+
+            <h2>(5) focus</h2>
+            <form action="">
+                <input type="text">
+            </form><hr>
+
+            <h2>(6) blur</h2>
+            <form action="">
+                <input type="text">
+            </form><hr>
+
+            <br><br>
         </main>
 
         <footer></footer>
