--- a/exo-clem/exo1.html
+++ b/exo-clem/exo1.html
@@ -15,8 +15,8 @@
             <nav></nav>
         </header>
     
-        <main>
-            <div id="mouseover" class="mouseout">div-1 MOUSEOVER</div>
+        <main id="mouseover" class="mouseout">
+            div-1 MOUSEOVER
         </main>
         
         <footer></footer>
