--- a/exo-clem/exo1/exo1.html
+++ b/exo-clem/exo1/exo1.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/exo1.css">
+        <link rel="stylesheet" href="exo1.css">
     </head>
 
     <body>
@@ -20,6 +20,6 @@
         </main>
         
         <footer></footer>
-        <script src="js/exo1.js"></script>
+        <script src="exo1.js"></script>
     </body>
 </html>
