--- a/exo-clem/exo4 (img-toggle)/exo4.html
+++ b/exo-clem/exo4 (img-toggle)/exo4.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>2022.07.21 - EXO4-JS-"IMG" - (Laurent)</title>
-        <meta name="description" content="Here I work on EXO4-JS-'IMG, Laurent's JS exercises">
+        <title>2022.07.21 - EXO4-JS-"IMG-toggle" - (Laurent)</title>
+        <meta name="description" content="Here I work on EXO4-JS-'IMG-toggle', Laurent's JS exercises">
         <link rel="stylesheet" href="exo4.css">
     </head>
 
