--- a/laurent-js/outils.html
+++ b/laurent-js/outils.html
@@ -308,13 +308,17 @@
         document.write("<h2>(10) Les Condition SWITCH</h2>");
         let couleur = "rouge";
         switch(couleur){
-            case "bleu": document.write("You've got bleu <br>");
+        case "bleu": 
+            document.write("You've got bleu <br>");
             break;
-            case "rouge": document.write("You've got red <br>");
+        case "rouge": 
+            document.write("You've got red <br>");
             break;
-            case "vert": document.write("You've got green <br>");
+        case "vert": 
+            document.write("You've got green <br>");
             break;
-            default: document.write("You've got no color <br>");
+        default: 
+            document.write("You've got no color <br>");
             break;
         }
 
