--- a/exo-clem/exo5 (img-carousel)/exo5.html
+++ b/exo-clem/exo5 (img-carousel)/exo5.html
@@ -17,9 +17,10 @@
 
         <main>
             <div>
-              <img src ='c.jpg' title ='description: plage deserte' id="monImage2">
+              <img src='c.jpg' title='descript: plage déserte' id="monImage2">
             </div>
-            <button id="changerImageTitre">Changer d'image et de title</button><br><br>
+            <button id="changerImageTitre">Changer d'image et de title</button>
+            <br><br><br><hr>
             
 
             <div>
@@ -29,7 +30,7 @@
 
 
         <footer></footer>
-        <script src="exo5.js"></script>
+        <script src="exo5(prof).js"></script>
     </body>
 </html>
 
