--- a/exo-clem/exo6 (toggle)/exo6.html
+++ b/exo-clem/exo6 (toggle)/exo6.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>2022.07.22 - EXO6-JS-"TOGGLE" - Rétréci (Laurent)</title>
+        <title>2022.07.22 - EXO6-JS-"TOGGLE" - (Laurent)</title>
         <meta name="description" content="Here I work on EXO3-JS-'TOGGLE', Laurent's JS exercises">
         <link rel="stylesheet" href="exo6.css">
     </head>
@@ -24,7 +24,7 @@
         </main>
 
         <footer></footer>
-        <script src="exo6.js"></script>
+        <script src="exo6(prof).js"></script>
 <!--CONSIGNES : lorsque je click sur le rectangle, il change son background-color en yellow. Lorsque je reclick sur le rectangle, il prend un background-color de couleur cyan. Chaque fois que je click, le rectangle doit alterner entre "background color yellow" et "background-color cyan"
 
 => Vous ne pouvez pas modifier le HTML
