--- a/exo-clem/exo7 (tp-clem)/index.html
+++ b/exo-clem/exo7 (tp-clem)/index.html
@@ -46,12 +46,12 @@
     <br>
 
     <main class="main-container">
-      <div class="navbar">
+      <div>
         <img class="roses-img" title="flowery music" src="brahms.JPG" alt="roses on a piano">
-      </div>
+      </div><br>
 
       <div>
-        <h1>A practice on Header-Navbar</h1>
+        <h2>Header-Navbar</h2>
       </div>
   
       <div>
