--- a/e-learning-js/1-2(opérateurs arithmétiques)/index.html
+++ b/e-learning-js/1-2(opérateurs arithmétiques)/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>exo - JavaScript (types-objects)</title>
-    <meta name="description" content="Here I work on JS (types-objects), Doranco's JS exercise">
+    <title>exo - JavaScript (arithmetic operators)</title>
+    <meta name="description" content="Here I work on JS (arithmetic operators), Doranco's JS exercise">
 </head>
 <body>
     
