--- a/e-learning-js/1-6(loops-iteration)/index.html
+++ b/e-learning-js/1-6(loops-iteration)/index.html
@@ -5,11 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <title>exo - JavaScript (Loops-Iteration)</title>
-        <meta name="description" content="Here I work on JS (Loops-Iteration), Doranco's JS exercise">
+        <title>exo - JavaScript (Loops-Iterations)</title>
+        <meta name="description" content="Here I work on JS (Loops-Iterations), Doranco's JS exercise">
     </head>
     <body>
         
-        <script></script>
+        <script src="script.js"></script>
     </body>
 </html>
