--- a/e-learning-js/2-1(variables)/index.html
+++ b/e-learning-js/2-1(variables)/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>exo - JavaScript (types-objects)</title>
-    <meta name="description" content="Here I work on JS (types-objects), Doranco's JS exercise">
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>exo - JavaScript (Variables & Functions SCOPE)</title>
+        <meta name="description" content="Here I work on JS (Variables & Functions SCOPE), Doranco's JS exercise">
+    </head>
+    <body>
+       <script src="script.js"></script> 
+    </body>
 </html>
