--- a/exo-clem/exo7 (tp-clem)/index.html
+++ b/exo-clem/exo7 (tp-clem)/index.html
@@ -38,7 +38,7 @@
             <i class="fa-solid fa-bars"></i>
           </div>
 
-          <div class="close burgers">
+          <div class="close">
             <h3>X</h3>
           </div>
         </nav>
