--- a/e-learning-js/2-7(controller-form-JS)/index.html
+++ b/e-learning-js/2-7(controller-form-JS)/index.html
@@ -9,6 +9,6 @@
     <meta name="description" content="Here I work on JS (types-objects), Doranco's JS exercise">
 </head>
 <body>
-    
+    lorem300
 </body>
 </html>
