--- a/david-js/index.html
+++ b/david-js/index.html
@@ -4,9 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Ma liste de taches</title>
     </head>
+
     <body>
-        <script src="9-click.js"></script>
+        <h1>Ma Liste de taches</h1>
+        <ul class="task-list">
+        </ul>
+        <input type="text" placeholder="Ajouter une tâche" class="task-input" />
+        <button class="add-task">Ajouter</button>
+        <script src="./todo.js"></script>
     </body>
 </html>
