--- a/david-todoExo/exercice-todo-list/index.html
+++ b/david-todoExo/exercice-todo-list/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Ma Liste de tâches (EXO)</h1>
     <ul class="todo-list"></ul>
-    <input type="text" class="todo-input">
+    <input type="text" placeholder="écrire votre tâche" class="todo-input" />
     <button class="todo-btn">Ajouter</button>
     <script src="./app.js"></script>
   </body>
