--- a/e-learning-js/2-9(carRental-JS)/index.html
+++ b/e-learning-js/2-9(carRental-JS)/index.html
@@ -18,16 +18,16 @@
             <!-- BURGER MENU -->
             <div class="flex justify-end">
                 <div id="burger_menu" class="flex flex-column align-center justify-center">
-                    <div>A</div>
-                    <div>B</div>
-                    <div>C</div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </div>
             </div>
 
             <!-- SCROLLING MENU -->
             <div id="scrolling_menu">
                 <ul>
-                    <li><a herf="#"> Rent a Car</a></li>
+                    <li><a href="#"> Rent a Car</a></li>
                     <li><a href="#"> Rent a Commercial Car</a></li>
                     <li><a href="#"> Reserve a Cab</a></li>
                     <li><a href="#"> Discover Our Agencies</a></li>
