--- a/e-learning-js/2-9(carRental-JS)/index.html
+++ b/e-learning-js/2-9(carRental-JS)/index.html
@@ -86,7 +86,7 @@
             <!-- (2) CARS -->
             <!-- CAR 1 -->
             <div class="car_description flex align-center">
-                <!-- Left Part -->
+                <!-- LEFT Part -->
                 <div class="flex align-center">
                     <!-- left arrow -->
                     <div class="arrow_left"></div>
@@ -101,7 +101,7 @@
                     <div class="arrow_right"></div>
                 </div>
 
-                <!-- Right Part -->
+                <!-- RIGHT Part -->
                 <div class="car_details">
                     <h3>Peugeot 208</h3>
                     <p>Lorem ipsum dolor sit amet.</p>
@@ -112,7 +112,7 @@
 
             <!-- CAR 2 -->
             <div class="car_description flex align-center">
-                <!-- Left Part -->
+                <!-- LEFT Part -->
                 <div class="flex align-center">
                     <!-- left arrow -->
                     <div class="arrow_left"></div>
@@ -127,7 +127,7 @@
                     <div class="arrow_right"></div>
                 </div>
 
-                <!-- Right Part -->
+                <!-- RIGHT Part -->
                 <div class="car_details">
                     <h3>Peugeot 208</h3>
                     <p>Lorem ipsum dolor sit amet.</p>
@@ -138,7 +138,7 @@
 
             <!-- CAR 3 -->
             <div class="car_description flex align-center">
-                <!-- Left Part -->
+                <!-- LEFT Part -->
                 <div class="flex align-center">
                     <!-- left arrow -->
                     <div class="arrow_left"></div>
@@ -153,7 +153,7 @@
                     <div class="arrow_right"></div>
                 </div>
 
-                <!-- Right Part -->
+                <!-- RIGHT Part -->
                 <div class="car_details">
                     <h3>Peugeot 208</h3>
                     <p>Lorem ipsum dolor sit amet.</p>
@@ -164,7 +164,7 @@
 
             <!-- CAR 4 -->
             <div class="car_description flex align-center">
-                <!-- Left Part -->
+                <!-- LEFT Part -->
                 <div class="flex align-center">
                     <!-- left arrow -->
                     <div class="arrow_left"></div>
@@ -179,7 +179,7 @@
                     <div class="arrow_right"></div>
                 </div>
 
-                <!-- Right Part -->
+                <!-- RIGHT Part -->
                 <div class="car_details">
                     <h3>Peugeot 208</h3>
                     <p>Lorem ipsum dolor sit amet.</p>
@@ -190,10 +190,10 @@
 
 
             <!-- (3) VEHICLES, to be FADED -->
+            <!-- CAR 1 -->
             <div class="toBeFaded">
-                <!-- CAR 1 -->
                 <div class="car_description flex align-center">
-                    <!-- Left Part -->
+                    <!-- LEFT Part -->
                     <div class="flex align-center">
                         <!-- left arrow -->
                         <div class="arrow_left"></div>
@@ -208,7 +208,7 @@
                         <div class="arrow_right"></div>
                     </div>
 
-                    <!-- Right Part -->
+                    <!-- RIGHT Part -->
                     <div class="car_details">
                         <h3>Peugeot 208</h3>
                         <p>Lorem Ipsum is simply dummy text of the printing</p>
@@ -218,8 +218,8 @@
                 </div>
             </div>
 
+            <!-- CAR 2 -->
             <div class="toBeFaded">
-                <!-- CAR 2 -->
                 <div class="car_description flex align-center">
                     <!-- Left Part -->
                     <div class="flex align-center">
@@ -246,8 +246,8 @@
                 </div>
             </div>
 
+            <!-- CAR 3 -->
             <div class="toBeFaded">
-                <!-- CAR 3 -->
                 <div class="car_description flex align-center">
                     <!-- Left Part -->
                     <div class="flex align-center">
@@ -274,8 +274,8 @@
                 </div>
             </div>
 
+            <!-- CAR 4 -->
             <div class="toBeFaded">
-                <!-- CAR 4 -->
                 <div class="car_description flex align-center">
                     <!-- Left Part -->
                     <div class="flex align-center">
