--- a/e-learning-js/2-7(form-control-JS)/index.html
+++ b/e-learning-js/2-7(form-control-JS)/index.html
@@ -14,7 +14,7 @@
             <span class="form_col">Sex :</span>
             <label for=""><input type="radio" name="sex" value="M"/>Male</label>
             <label for=""><input type="radio" name="sex" value="F"/>Female</label>
-            <label for=""><input type="radio" name="sex" value="T"/>Transgeder</label>
+            <!-- <label for=""><input type="radio" name="sex" value="T"/>Transgeder</label> -->
             <span class="tooltip">Please select your gender</span>
             <br/><br/>
 
